fix: navbar logo nowrap, smaller h1 on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@
   }
 
   .fluid-h1 {
-    font-size: clamp(1.75rem, 5vw + 0.5rem, 5rem);
+    font-size: clamp(1.4rem, 5vw + 0.5rem, 5rem);
     line-height: 1.15;
   }
 
